--- a/microb_uy_mobile/Pages/SignOutPage.xaml
+++ b/microb_uy_mobile/Pages/SignOutPage.xaml
@@ -6,7 +6,7 @@
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand" Padding="20">
             <Image Source="dotnet_bot.svg" HeightRequest="150" HorizontalOptions="Center" />
-            <Button Text="Sign Out" Clicked="OnSignOutButtonClicked" Margin="0, 20" />
+            <Button Text="Salir" Clicked="OnSignOutButtonClicked" Margin="0, 20" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
