--- a/microb_uy_mobile/Pages/TabMenu.xaml
+++ b/microb_uy_mobile/Pages/TabMenu.xaml
@@ -7,9 +7,7 @@
 
     <pages:HomePage/>
     <pages:SearchPage/>
+    <pages:NotificationsSettingsPage/>
     <pages:SignOutPage/>
-    <!--<local:MainPage/>-->
-    <!--<pages:LoginPage/>
-    <pages:SignUpPage/>-->
 
 </TabbedPage>
