--- a/microb_uy_mobile/MainPage.xaml
+++ b/microb_uy_mobile/MainPage.xaml
@@ -4,7 +4,7 @@
              x:Class="microb_uy_mobile.MainPage"
              Title="MainPage">
 
-    <CollectionView ItemsSource="{Binding Instancias}" SelectionMode="Single">
+    <CollectionView ItemsSource="{Binding Instances}" SelectionMode="Single">
         <CollectionView.ItemsLayout>
             <GridItemsLayout Orientation="Vertical" Span="2" />
         </CollectionView.ItemsLayout>
