--- a/microb_uy_mobile/Pages/Integrations/IntegrationsExitPage.xaml
+++ b/microb_uy_mobile/Pages/Integrations/IntegrationsExitPage.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="microb_uy_mobile.Pages.SignOutPage"
+             x:Class="microb_uy_mobile.Pages.Integrations.IntegrationsExitPage"
              IconImageSource="sign_out_icon.png">
     <ContentPage.Content>
         <StackLayout VerticalOptions="CenterAndExpand" Padding="20">
             <Image Source="dotnet_bot.svg" HeightRequest="150" HorizontalOptions="Center" />
-            <Button Text="Cerrar sesion" Clicked="OnSignOutButtonClicked" Margin="0, 20" />
+            <Button Text="Salir" Clicked="OnSignOutButtonClicked" Margin="0, 20" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
