--- a/microb_uy_mobile/Pages/SearchPage.xaml
+++ b/microb_uy_mobile/Pages/SearchPage.xaml
@@ -5,24 +5,123 @@
              IconImageSource="search_icon.png">
     <ContentPage.Content>
         <StackLayout>
-            <!-- Barra de búsqueda con campo de texto y botón de búsqueda -->
             <SearchBar Placeholder="Buscar en microbuy" />
 
+            <!-- Pestañas para seleccionar el tipo de búsqueda -->
+            <Grid BackgroundColor="LightGray" ColumnSpacing="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Button x:Name="PostsButton" Text="Posts" Clicked="OnTabSelected" TextColor="Gray" FontSize="16" BackgroundColor="LightGray" />
+                <Button x:Name="HashtagsButton" Text="Hashtags" Clicked="OnTabSelected" TextColor="Gray" FontSize="16" BackgroundColor="LightGray" Grid.Column="1" />
+                <Button x:Name="UsuariosButton" Text="Usuarios" Clicked="OnTabSelected" TextColor="Gray" FontSize="16" BackgroundColor="LightGray" Grid.Column="2" />
+            </Grid>
             <!-- Resultados de la búsqueda -->
-            <CollectionView ItemsSource="{Binding SearchResults}">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Padding="10">
-                            <!-- Avatar del usuario y nombre -->
-                            <Image Source="{Binding UserProfileImage}" HeightRequest="50" WidthRequest="50" Aspect="AspectFill" />
-                            <StackLayout Margin="10,0,0,0" Spacing="5">
-                                <Label Text="{Binding UserName}" FontAttributes="Bold" />
-                                <Label Text="{Binding PostContent}" />
+            <StackLayout>
+                <!-- Contenido de la pestaña seleccionada -->
+                <CollectionView x:Name="SearchResultsPosts" IsVisible="true">
+                    <!-- - - - - - - - - - - - - - - Plantilla de resultados para posts - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <StackLayout Padding="10" Margin="5,5,5,0" BackgroundColor="#ffffff">
+                                <!-- Encabezado del post: Imagen de perfil y nombre de usuario -->
+                                <StackLayout Orientation="Horizontal" Spacing="10">
+
+                                    <Frame HeightRequest="50" WidthRequest="50" CornerRadius="70" HorizontalOptions="Center" IsClippedToBounds="True" Padding="0" BorderColor="Gray" Margin="0,0,0,0">
+                                        <Image Aspect="AspectFit" Source="{Binding UserProfileImage}" SemanticProperties.Description="Cute dot net bot waving hi to you!" HeightRequest="50" WidthRequest="50" VerticalOptions="Center"                                            HorizontalOptions="Center" />
+                                    </Frame>
+                                    <Label Text="{Binding UserName}" FontAttributes="Bold" VerticalOptions="Center" />
+                                </StackLayout>
+
+                                <!-- Contenido del post -->
+                                <Label Text="{Binding PostContent}" VerticalOptions="Start">
+                                    <Label.GestureRecognizers>
+                                        <TapGestureRecognizer Tapped="OnPostContentTapped" />
+                                    </Label.GestureRecognizers>
+                                </Label>
+
+                                <!-- Acciones del post: Retweet y Me gusta -->
+                                <Grid HorizontalOptions="CenterAndExpand" RowSpacing="0" ColumnSpacing="125">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="Auto" />
+                                        <ColumnDefinition Width="Auto" />
+                                    </Grid.ColumnDefinitions>
+                                    <Image Source="retweet_icon.png" HeightRequest="24" WidthRequest="24" HorizontalOptions="Center">
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="OnRetweetIconTapped" />
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                    <Image Source="empty_like_icon.png" HeightRequest="24" WidthRequest="24" HorizontalOptions="Center" Grid.Column="1">
+                                        <Image.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="OnLikeIconTapped" />
+                                        </Image.GestureRecognizers>
+                                    </Image>
+                                </Grid>
                             </StackLayout>
-                        </Grid>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
+                <CollectionView x:Name="SearchResultsHashtags" IsVisible="false">
+                    <!-- Plantilla de resultados para hashtags -->
+                    <!-- - - - - - - - - - - - - - - Agrega aquí la plantilla para hashtags - - - - - - - - - - - - - - -->
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Frame CornerRadius="10" HasShadow="True" BorderColor="#dddddd" BackgroundColor="White" Margin="10">
+                                <StackLayout Spacing="5">
+                                    <!-- Encabezado del hashtag: Nombre del hashtag -->
+                                    <StackLayout Orientation="Horizontal" Spacing="10">
+                                        <Image Source="hashtag_icon.png" HeightRequest="24" WidthRequest="24" VerticalOptions="Center" />
+                                        <Label Text="{Binding HashTagName}" TextColor="Black" FontAttributes="Bold" VerticalOptions="Center" />
+                                    </StackLayout>
+
+                                    <!-- Descripción del hashtag -->
+                                    <Label Text="{Binding HashTagDescription}" TextColor="Gray" LineBreakMode="WordWrap" />
+                                </StackLayout>
+                            </Frame>
+                        </DataTemplate>
+
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+
+                <CollectionView x:Name="SearchResultsUsuarios" IsVisible="false">
+                    <!-- Plantilla de resultados para usuarios -->
+                    <!-- - - - - - - - - - - - - - -  Agrega aquí la plantilla para usuarios - - - - - - - - - - - - - - -->
+                    <!-- Dentro de SearchResultsUsuarios -->
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Frame CornerRadius="10" HasShadow="True" BorderColor="#dddddd" BackgroundColor="White" Margin="10">
+                                <StackLayout BackgroundColor="#ffffff">
+                                    <!-- Encabezado del post: Imagen de perfil y nombre de usuario -->
+                                    <StackLayout Orientation="Horizontal" Spacing="10">
+                                        <Frame HeightRequest="50" WidthRequest="50" CornerRadius="70" HorizontalOptions="Center" IsClippedToBounds="True" Padding="0" BorderColor="Gray" Margin="0,0,0,0">
+                                            <Image Aspect="AspectFit" Source="{Binding UserProfileImage}" SemanticProperties.Description="Cute dot net bot waving hi to you!" HeightRequest="50" WidthRequest="50" VerticalOptions="Center"                                            HorizontalOptions="Center" />
+                                        </Frame>
+                                        <Label Text="{Binding UserName}" FontAttributes="Bold" VerticalOptions="Center" />
+                                    </StackLayout>
+
+                                    <!-- Contenido del post -->
+                                    <Label Text="{Binding UserBio}" VerticalOptions="Start" Margin="0, 10"></Label>
+                                    <!-- Línea separadora -->
+                                </StackLayout>
+                            </Frame>
+                            <!--<DataTemplate>
+                                <Grid Padding="10">
+                                    -->
+                            <!-- Contenido específico para resultados de Usuarios -->
+                            <!--
+                                    <Image Source="{Binding UserProfileImage}" HeightRequest="50" WidthRequest="50" Aspect="AspectFill" />
+                                    <Label Text="{Binding UserName}" FontAttributes="Bold" />
+                                    <Label Text="{Binding UserBio}" LineBreakMode="WordWrap" />
+                                </Grid>
+                            </DataTemplate>-->
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
