--- a/microb_uy_mobile/Pages/LoginPage.xaml
+++ b/microb_uy_mobile/Pages/LoginPage.xaml
@@ -7,7 +7,7 @@
             <Image Source="twitter_logo.png" HeightRequest="100" HorizontalOptions="Center" />
 
             <!-- Nombre de usuario y contraseña -->
-            <Entry Placeholder="Nombre de usuario" x:Name="usernameEntry" Margin="0, 20" />
+            <Entry Placeholder="Email" x:Name="emailEntry" Margin="0, 20" />
             <Entry Placeholder="Contraseña" IsPassword="True" x:Name="passwordEntry" Margin="0, 10" />
 
             <!-- Botón de inicio de sesión -->
