--- a/microb_uy_mobile/Pages/Integrations/IntegrationsTabMenu.xaml
+++ b/microb_uy_mobile/Pages/Integrations/IntegrationsTabMenu.xaml
@@ -2,13 +2,16 @@
 <TabbedPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:pages="clr-namespace:microb_uy_mobile.Pages"
+             xmlns:integrations_searchpages="clr-namespace:microb_uy_mobile.Pages.Integrations.SearchPages"
              xmlns:integrations="clr-namespace:microb_uy_mobile.Pages.Integrations"
              xmlns:local="clr-namespace:microb_uy_mobile"
              x:Class="microb_uy_mobile.Pages.Integrations.IntegrationsTabMenu"
             >
 
-    <pages:HomePage/>
-    <pages:SearchPage/>
+    <integrations:IntegrationsHomePage/>
+    <integrations_searchpages:IntegrationsSearchPostsPage/>
+    <integrations_searchpages:IntegrationsSearchHashtagsPage/>
+    <integrations_searchpages:IntegrationsSearchUsersPage/>
     <integrations:IntegrationsExitPage/>
 
 </TabbedPage>
