--- a/microb_uy_mobile/Pages/Integrations/IntegrationsPostDetailPage.xaml
+++ b/microb_uy_mobile/Pages/Integrations/IntegrationsPostDetailPage.xaml
@@ -2,7 +2,7 @@
 <local:BasePostDetailPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
               xmlns:local="clr-namespace:microb_uy_mobile.Pages.BasePages"
-              x:Class="microb_uy_mobile.Pages.PostDetailPage">
+              x:Class="microb_uy_mobile.Pages.Integrations.IntegrationsPostDetailPage">
 
     <!-- Heredo toda la vista desde el BasePostDetailPage -->
 </local:BasePostDetailPage>
