--- a/microb_uy_mobile/Pages/BasePages/BasePostDetailPage.xaml
+++ b/microb_uy_mobile/Pages/BasePages/BasePostDetailPage.xaml
@@ -66,7 +66,7 @@
                                     <Label Text="{Binding PostContent}" VerticalOptions="Start">
                                     </Label>
 
-                                    <!-- Acciones de la respuesta: Retweet y Me gusta -->
+                                    <!-- Acciones de la respuesta: Retweet y Me gusta --><!--
                                     <Grid HorizontalOptions="CenterAndExpand" RowSpacing="0" ColumnSpacing="125">
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="Auto" />
@@ -82,7 +82,7 @@
                                                 <TapGestureRecognizer Tapped="OnLikeIconTapped" />
                                             </Image.GestureRecognizers>
                                         </Image>
-                                    </Grid>
+                                    </Grid>-->
                                 </StackLayout>
                             </DataTemplate>
                         </CollectionView.ItemTemplate>
