--- a/microb_uy_mobile/Pages/BasePages/BaseSearchHashtagsPage.xaml
+++ b/microb_uy_mobile/Pages/BasePages/BaseSearchHashtagsPage.xaml
@@ -1,16 +1,22 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="microb_uy_mobile.Pages.BasePages.BaseSearchHashtagsPage"
-             xmlns:local="clr-namespace:microb_uy_mobile.Pages.BasePages"
+             xmlns:local="clr-namespace:microb_uy_mobile.Pages"
              IconImageSource="search_icon_hashtag.png">
     <ContentPage.Content>
-        <ScrollView>
+        <!--<ScrollView>-->
             <StackLayout>
                 <!-- Contenido específico de la pestaña "Hashtags" -->
-                <SearchBar x:Name="_searchBar" Placeholder="Buscar en microbuy" SearchButtonPressed="OnSearchButtonPressed"/>
+                <Grid>
+                    <SearchBar x:Name="_searchBar" Placeholder="Buscar en microbuy" Grid.Column="0"/>
+                    <Button Text="Buscar" Clicked="OnSearchButtonClicked" Grid.Column="1" WidthRequest="40" HeightRequest="40"  HorizontalOptions="EndAndExpand"/>
+                </Grid>
 
+                <Label IsVisible="false" x:Name="NoResults" Text="Busca Hashtags!" FontAttributes="Bold" FontSize="16" TextColor="Black" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+                
                 <!-- Colección y plantilla para la pestaña "Hashtags" -->
-                <CollectionView x:Name="SearchResultsHashtags" IsVisible="true">
+                <CollectionView x:Name="SearchResultsHashtags" IsVisible="true" VerticalOptions="FillAndExpand" VerticalScrollBarVisibility="Always"
+                                ItemsSource="{Binding HashTagList}">
                     <CollectionView.ItemTemplate>
                         <!-- SearchPageHashtags.xaml -->
                         <DataTemplate>
@@ -19,18 +25,17 @@
                                     <!-- Encabezado del hashtag: Nombre del hashtag -->
                                     <StackLayout Orientation="Horizontal" Spacing="10">
                                         <Image Source="hashtag_icon.png" HeightRequest="24" WidthRequest="24" VerticalOptions="Center" />
-                                        <Label Text="{Binding HashTagName}" TextColor="Black" FontAttributes="Bold" VerticalOptions="Center" />
+                                        <Label Text="{Binding NombreHT}" TextColor="Black" FontAttributes="Bold" VerticalOptions="Center" />
                                     </StackLayout>
 
                                     <!-- Descripción del hashtag -->
-                                    <Label Text="{Binding HashTagDescription}" TextColor="Gray" LineBreakMode="WordWrap" />
+                                    <Label Text="{Binding Cantidad}" TextColor="Gray" LineBreakMode="WordWrap" />
                                 </StackLayout>
                             </Frame>
                         </DataTemplate>
-
                     </CollectionView.ItemTemplate>
                 </CollectionView>
             </StackLayout>
-        </ScrollView>
+        <!--</ScrollView>-->
     </ContentPage.Content>
 </ContentPage>
