--- a/microb_uy_mobile/Pages/Integrations/SearchPages/IntegrationsSearchUsersPage.xaml
+++ b/microb_uy_mobile/Pages/Integrations/SearchPages/IntegrationsSearchUsersPage.xaml
@@ -1,7 +1,39 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<local:BaseSearchUsersPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<!-- SearchPageUsuarios.xaml -->
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:microb_uy_mobile.Pages.BasePages"        
-             x:Class="microb_uy_mobile.Pages.Integrations.SearchPages.IntegrationsSearchUsersPage">
+             x:Class="microb_uy_mobile.Pages.Integrations.SearchPages.IntegrationsSearchUsersPage"
+             xmlns:local="clr-namespace:microb_uy_mobile.Pages.Integrations.SearchPages"
+             IconImageSource="search_icon_users.png">
+    <ContentPage.Content>
+        <ScrollView>
+            <StackLayout>
+                <!-- Contenido específico de la pestaña "Usuarios" -->
+                <SearchBar x:Name="_searchBar" Placeholder="Buscar en microbuy" SearchButtonPressed="OnSearchButtonPressed"/>
 
-</local:BaseSearchUsersPage>
+                <!-- Colección y plantilla para la pestaña "Usuarios" -->
+                <CollectionView x:Name="SearchResultsUsuarios" IsVisible="true">
+                    <CollectionView.ItemTemplate>
+                        <!-- SearchPageUsuarios.xaml -->
+                        <DataTemplate>
+                            <Frame CornerRadius="10" HasShadow="True" BorderColor="#dddddd" BackgroundColor="White" Margin="10">
+                                <StackLayout BackgroundColor="#ffffff">
+                                    <!-- Encabezado del post: Imagen de perfil y nombre de usuario -->
+                                    <StackLayout Orientation="Horizontal" Spacing="10">
+                                        <Frame HeightRequest="50" WidthRequest="50" CornerRadius="70" HorizontalOptions="Center" IsClippedToBounds="True" Padding="0" BorderColor="Gray" Margin="0,0,0,0">
+                                            <Image Aspect="AspectFit" Source="{Binding UserProfileImage}" SemanticProperties.Description="Cute dot net bot waving hi to you!" HeightRequest="50" WidthRequest="50" VerticalOptions="Center" HorizontalOptions="Center" />
+                                        </Frame>
+                                        <Label Text="{Binding UserName}" FontAttributes="Bold" VerticalOptions="Center" />
+                                    </StackLayout>
+
+                                    <!-- Contenido del post -->
+                                    <Label Text="{Binding UserBio}" VerticalOptions="Start" Margin="0, 10"></Label>
+                                    <!-- Línea separadora -->
+                                </StackLayout>
+                            </Frame>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </StackLayout>
+        </ScrollView>
+    </ContentPage.Content>
+</ContentPage>
