--- a/microb_uy_mobile/Pages/Integrations/SearchPages/IntegrationsSearchUsersPage.xaml
+++ b/microb_uy_mobile/Pages/Integrations/SearchPages/IntegrationsSearchUsersPage.xaml
@@ -20,13 +20,13 @@
                                     <!-- Encabezado del post: Imagen de perfil y nombre de usuario -->
                                     <StackLayout Orientation="Horizontal" Spacing="10">
                                         <Frame HeightRequest="50" WidthRequest="50" CornerRadius="70" HorizontalOptions="Center" IsClippedToBounds="True" Padding="0" BorderColor="Gray" Margin="0,0,0,0">
-                                            <Image Aspect="AspectFit" Source="{Binding UserProfileImage}" SemanticProperties.Description="Cute dot net bot waving hi to you!" HeightRequest="50" WidthRequest="50" VerticalOptions="Center" HorizontalOptions="Center" />
+                                            <Image Aspect="AspectFit" Source="{Binding PerfilImg}" SemanticProperties.Description="Cute dot net bot waving hi to you!" HeightRequest="50" WidthRequest="50" VerticalOptions="Center" HorizontalOptions="Center" />
                                         </Frame>
-                                        <Label Text="{Binding UserName}" FontAttributes="Bold" VerticalOptions="Center" />
+                                        <Label Text="{Binding Nombre}" FontAttributes="Bold" VerticalOptions="Center" />
                                     </StackLayout>
 
                                     <!-- Contenido del post -->
-                                    <Label Text="{Binding UserBio}" VerticalOptions="Start" Margin="0, 10"></Label>
+                                    <Label Text="{Binding Biografia}" VerticalOptions="Start" Margin="0, 10"></Label>
                                     <!-- Línea separadora -->
                                 </StackLayout>
                             </Frame>
